--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+
 .App {
   text-align: center;
+}
+
+h1 {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 60px;
+}
+
+body {
+  background-color: black;
+}
+
+.colorBox {
+  background-color: white;
+  color: black;
+  font-family: Montserrat, sans-serif;
+  padding: 10px;
+}
+
+div,
+input,
+label {
+  margin-bottom: 1rem;
+  margin-right: 10px;
+  margin-left: 10px;
   align-content: center;
-  margin: auto;
-}
-
-/* .ColorBox {
-  border: 'solid #000 5px';
-  width: '200px';
-  height: '200px';
-} */
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
   color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  color: black;
+  text-align: left;
+  align-content: left;
 }
